Fix: Backup database failed